syntax = "proto3";

package Booking;

import "google/protobuf/timestamp.proto";


option go_package = "./pkg/pb";

service BookingManagement {
    rpc SearchTrain(SearchTrainRequest) returns (SearchTrainResponse) {} 
}
//Search train 
message SearchTrainRequest{
    string date =1;
    string sourcestationid=2;
    string destinationstationid=3;
}
message SearchTrainResponse {
    int64 status = 1;
    string error = 2;
    repeated TrainData traindata=3;
}

message TrainData{
    string trainname =1;
    google.protobuf.Timestamp time = 2;
}